--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,11 @@ button {
   color: #fff;
   font-size: 16px;
   text-transform: uppercase;
+  cursor: pointer;
+}
+
+button:hover {
+  transform: scale(1.1);
 }
 
 p {
